# Rapport-System

./: CMakeCache.txt  CMakeLists.txt  Database.cpp  Database.hpp  Makefile  PythonCode.cpp  PythonCode.hpp  RAPPORT_LAYOUT.txt  README.md  Student.cpp  Student.hpp  cmake_install.cmake  db.sql  design_rapport.py  main.cpp  output  run.sh
src/images/: test.py
src/trash/: lost_code.lc  rapport-design.xcf
